# persistence_manager

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: BuildDefaults.cmake
cmake/functions/: FetchContentGoogleTest.cmake  FetchContentHttpParser.cmake  FetchContentLibUV.cmake
include/: isodate.hpp  persistence_manager.h  registry_item_t.h
include/ext/: date.h
src/: persistence_manager.cpp
test/: CMakeLists.txt
test/cma/: persistence_manager.cpp
